# googlecodeimport-nmt-cs326-g5

./: AbortFileTransfer.md  AppCommon.h  AppConfig.cpp  AppConfig.h  AppEnum.h  AppFrame.cpp  AppLogin.cpp  AppLogin.h  AppMain.cpp  AppMain.h  AppMenu.cpp  AppMenu.h  AppPanel.h  AppProtocol.cpp  AppProtocol.h  AppTaskbarBalloon.h  AppUpdate.cpp  AppUpdate.h  AppWidget.cpp  AppWidget.h  BitTorrent.md  BrowseContentSite.md  BrowserEmbed.cpp  BrowserEmbed.h  CMakeLists.txt  ChatCommon.h  ChatConnection.cpp  ChatConnectionThread.cpp  ChatMessage.cpp  ChatRoster.cpp  ChatRoster.h  ChatWindow.cpp  ChatWindow.h  Classes.md  DBManager.cpp  DBManager.h  Database.md  DesignSpecModifications.md  DesignSpecification.md  DesignateFileSponsoredStatus.md  (+58 more)
GassLib/: GassCheckVersion.py  XMLFilter.py
branches/wxSean/: CMakeLists.txt  frame.h  menu.cpp
branches/wxWidgets/: AppConfig.cpp  AppConfig.h  AppFrame.cpp  AppFrame.h  AppLogin.cpp  AppLogin.h  AppMenu.cpp  AppMenu.h  AppPanel.cpp  AppTaskbar.cpp  AppTaskbar.h  AppUpdate.cpp  AppUpdate.h  CMakeLists.txt  ChatConnection.h  ChatConnectionThread.cpp  ChatMessage.cpp  ChatRoster.cpp  ChatRoster.h  ChatRosterWindow.cpp  ChatWindow.cpp  ChatWindow.h  HttpManager.cpp  SettingsDialog.cpp  SettingsDialog.h  TorrentAlertTimer.cpp  TorrentAlertTimer.h  TorrentBencode.cpp  TorrentBencode.h  TorrentCommon.h  TorrentManager.cpp  TorrentManager.h  TransferCommon.cpp  TransferManager.h  TransferManagerList.h  config.h.cmake
branches/wxWidgets/contrib/: ddps.rc  ddps.xpm  ddps_chat.cmake  ddps_option_logic.cmake  ddps_sys_osx.cmake  ddps_sys_win32.cmake  ddps_updater.cmake  local.xml  register_ddps_protocol_win32.reg
branches/wxWidgets/contrib/cmake/: CMakeLists.libtorrent-0.13.txt  CMakeLists.wxCurl.txt
branches/wxWidgets/wxMoz/: CMakeLists.txt  cstmdlg.cpp  helpers.cpp  wxMozillaBrowser.cpp  wxMozillaBrowserInterface.h  wxMozillaSettings.h  wxMozillaWindow.h
chat/: ChatAccount.cpp  ChatAccount.h  ChatBackend.h  ChatCommon.cpp  ChatConnection.cpp  ChatConnection.h  ChatConnectionThread.cpp  ChatConnectionThread.h  ChatGroup.cpp  ChatRegister.cpp  ChatRoster.h  ChatRosterData.cpp  ChatRosterData.h  ChatWindow.cpp  ChatWindow.h  ChatWindowThread.cpp  ChatWindowThread.h  JabberMessage.cpp  JabberMessage.h
cmake/: boost.cmake  browser.cmake  chat.cmake  custom_commands.cmake  ddps_downloader.cmake  ddps_downloader_torrent.cmake  ddps_gloox.cmake  ddps_libtorrent.cmake  ddps_packaging.cmake  ddps_sys_osx.cmake  ddps_updater.cmake  downloader.cmake  downloader_http.cmake  gloox.cmake  libtorrent.cmake  qca.cmake  sys_osx.cmake
contrib/: CopyIfDifferent.cmake  FindwxWindows.cmake  ListGass.xml  add_package_games.py  ddps.aps  ddps_browser.cmake  ddps_custom_commands.cmake  ddps_downloader.cmake  ddps_option_logic.cmake  ddps_sys_linux.cmake  ddps_sys_win32.cmake  ddps_torrent.cmake  ddps_updater.cmake  gloox-cmake-fix.patch  original.torrent  resource.h  (+4 more)
contrib/libtorrent/: CMakeLists.txt
mozembed/: CMakeLists.txt
mozembed/common/: Doxyfile  Embedding.h  EmbeddingSetup.cpp  WebBrowserChrome.cpp  WebBrowserChrome.h  embed.cpp
mozembed/wx/: Makefile  test.cpp  wxMozView.cpp  wxMozView.h
trunk/: AppCommon.cpp  AppCommon.h  AppConfig.cpp  AppConfig.h  AppEnum.h  AppFrame.cpp  AppFrame.h  AppLogin.cpp  AppLogin.h  AppMain.cpp  AppMain.h  AppMenu.cpp  AppMenu.h  AppPanel.cpp  AppProtocol.h  AppTaskbarBalloon.cpp  AppWidget.cpp  AppWidget.h  BrowserEmbed.cpp  BrowserEmbed.h  CMakeLists.txt  ChatCommon.h  ChatConnection.cpp  ChatMessage.h  ChatRoster.cpp  ChatRosterData.cpp  ChatWindow.cpp  DBManager.cpp  DBManager.h  HttpManager.cpp  HttpManager.h  SettingsDialog.cpp  SettingsDialog.h  TorrentAlertTimer.cpp  TorrentBencode.cpp  TorrentBencode.h  TorrentManager.cpp  TorrentManager.h  TorrentProperties.cpp  TorrentTimer.h  (+17 more)
trunk/chat/: ChatBackend.cpp  ChatBackend.h  ChatCommon.cpp  ChatCommon.h  ChatConnection.cpp  ChatConnection.h  ChatConnectionThread.cpp  ChatGroup.h  ChatRoster.cpp  ChatRosterData.cpp  ChatRosterWindow.cpp  ChatRosterWindow.h  ChatWindow.cpp  ChatWindow.h  JabberMessage.h
trunk/cmake/: ddps_boost.cmake  ddps_downloader_torrent.cmake  ddps_gloox.cmake  ddps_libtorrent.cmake  ddps_sys_win32.cmake  downloader_http.cmake  downloader_torrent.cmake  gloox.cmake  option_logic.cmake  sys_win32.cmake
trunk/contrib/: FindWxWin.cmake  ddps.aps  ddps2.rc  ddps_browser.cmake  ddps_custom_commands.cmake  ddps_downloader.cmake  ddps_downloader_http.cmake  ddps_downloader_torrent.cmake  ddps_option_logic.cmake  ddps_sys_linux.cmake  ddps_sys_osx.cmake  ddps_sys_win32.cmake  ddps_torrent.cmake  ddps_updater.cmake  register_linux_mac_ddps_protocol.txt
trunk/contrib/cmake/: CMakeLists.libtorrent.txt
trunk/contrib/includes/libtorrent/: bandwidth_manager.hpp
trunk/contrib/includes/wxmozilla/: helpers.h  wxMozilla.h  wxMozillaBrowser.h  wxMozillaDialogs.h  wxMozillaEvents.h
trunk/contrib/includes/wxmozilla-demo/: main.cpp
trunk/contrib/libs/: wxmozilla_lib.idb
trunk/contrib/libtorrent/: CMakeLists.svn.txt  CMakeLists.txt
trunk/downloader/: HttpManager.cpp  HttpManager.h  TorrentAlertTimer.h  TorrentManager.cpp  TorrentManager.h  TorrentProperties.cpp  TransferManager.h  TransferTimer.cpp  TransferTimer.h
trunk/includes/wxmozilla/: helpers.cpp  wxMozillaBrowserChrome.h  wxMozillaDialogs.cpp  wxMozillaProtocolHandler.h  wxMozillaSettings.h
trunk/lib/: wxmozilla_dll.idb  wxmozilla_lib.lib
trunk/modular/: PluginStyle.cpp  PluginStyle.pro  myForm.qrc
trunk/mozembed/: CMakeLists.txt
trunk/mozembed/common/: EmbeddingSetup.h  embed.h
trunk/mozembed/wx/: wxMozProfile.cpp  wxMozProfile.h  wxMozView.h
trunk/skins/default/: AppLoginWindow.ui  default.qrc  default.rcc  rebuild.sh
trunk/webupdate/: CMakeLists.txt
trunk/webupdate/app/: webupdatedlg.cpp  webupdatedlg.h
trunk/webupdate/include/wx/: webupdate.h
trunk/webupdate/src/: download.cpp  installer.cpp  md5.cpp
trunk/wxMoz/: CMakeLists.txt  wxMozillaBrowser.cpp  wxMozillaDialogs.cpp  wxMozillaProtocolHandler.cpp  wxMozillaProtocolHandler.h  wxMozillaWindow.cpp
(+106 files in other folders)
